Fix hero image on mobile

--- a/app/resources/front/css/_modules/hero.styl
+++ b/app/resources/front/css/_modules/hero.styl
@@ -36,7 +36,9 @@
 
 .mod-hero-img
     display                             block
-    min-width                           420px
+    width                               100%
+    height                              100%
+    min-width                           640px
     max-width                           none
     translate-middle()
 
